# KEA_System_Integration_2025

./: .gitignore  README.md
00_Data_parsing_server_part_II/01_node/: DataParser.js  MyModule.js  Person.js  app.js  package-lock.json  package.json
00_Data_parsing_server_part_II/02_python/: main.py  pyproject.toml
00_Data_parsing_server_part_II/02_python/my_parser/: __init__.py  my_parser.py  person.py
01_payment/: paymentiframe.html
01a_Individual_Data_parsing_servers/01_node/: index.js  package-lock.json
01a_Individual_Data_parsing_servers/02_python/: main.py  pyproject.toml
01a_Individual_Data_parsing_servers/node/: index.js  package-lock.json  package.json
01a_Individual_Data_parsing_servers/python/: pyproject.toml
01a_Individual_Data_parsing_servers_part_1/01_node/: index.js  package-lock.json  package.json
01a_Individual_Data_parsing_servers_part_1/02_python/: main.py  pyproject.toml
03_modules/es_html/: index.html  index.js  myModule.js
03_modules/html_classic/: index.html  index.js  myModule.js
03_modules/python_main/: library_importer.py  potential_library.py
03_modules/python_modules/: main.py
03a_Individual_data_parsing_server/: gemfile  index.rb  readMe.txt
03a_Individual_data_parsing_server/03aApi/: 03aApi.csproj  03aApi.http  03aApi.sln  Person.cs  WeatherForecast.cs
03a_Individual_data_parsing_server/04_mini_api/: 04_mini_api.csproj  Converter.cs  Person.cs  Program.cs
03a_Individual_data_parsing_server/serverB/: 04_mini_api.csproj  04_mini_api.sln  PersonDb.cs  Program.cs
04_encode_decode/node/: index.js
04_encode_decode/python/: main.py
04a_SSE_Example/01_node/: app.js  package-lock.json  package.json
04b_Pair_Database_granular_data_access/: docker-compose.yml  readme.md  run.sh
04b_Pair_Database_granular_data_access/01_expose/: .env.tempelete  Dockerfile  README.md  beskrivelse_givet - var uploadet på codeshare.txt  docker-compose.yml  init.sh
04b_Pair_Database_granular_data_access/02_integration/: notes.md
04b_Pair_Database_granular_data_access/db_data/: order.json  user.json
05_python_virtual_enviromments/03_poetry/: pyproject.toml
06_simple_servers/01_node/: index.js  package-lock.json  package.json
06_simple_servers/03_test/: index.js  package.json
06_simple_servers/04_other_server/: index.js  package-lock.json  package.json
06a_websocket/: README.md
06a_websocket/01_simple/: client.js  package-lock.json  package.json  server.js
06a_websocket/02_more/: client.js  package-lock.json  package.json  server.js
08_server_to_server/01_node/: index.js  package-lock.json  package.json
08_server_to_server/02_python/: main.py  pyproject.toml
08d_code_documentation/typescript/: package-lock.json  package.json  text.md  tsconfig.json  typedoc.json
09_environment_variables/01_node/: index.js  package.json
09_environment_variables/02_python/: main.py  pyproject.toml  time.py
11_short_polling/01_node/: index.js  package-lock.json  package.json
12a_pair_webhook/: app.js  helper.js  package-lock.json  package.json
13_server_sent_events/02_python/: main.py  pyproject.toml
13_server_sent_events/02_python/templates/: index.html
17_database_migrations/: pgdump.sql
17_database_migrations/02_python_alimpic/poetry/: alembic.ini  pyproject.toml
19_multipart_forms/: index.html
20_Base64_images/: index.html
21_audio/: index.html
22_MPEG-DASH/: app.js  commands1.sh  commands2.sh  package-lock.json  package.json
23_youtube_in_video/: index.html
u2_opgaver/: index.js
(+106 files in other folders)
