[project]
name = "03-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Ziegler",email = "29373163+alexander-ziegler-simonsen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "emoji (>=2.14.1,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)"
]

[tool.poetry]
packages = [{include = "03_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
