[project]
name = "02-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Ziegler",email = "29373163+alexander-ziegler-simonsen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
