[project]
name = "server-sent-events"
version = "0.1.0"
description = ""
authors = [
    {name = "Alexander Ziegler",email = "29373163+alexander-ziegler-simonsen@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    uvicorn = "^0.34.0"
    fastapi = "^0.115.11"
    jinja2 = "^3.1.6"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
